# regolith-de

./: .SRCINFO  .gitignore  PKGBUILD  README.md  flashback.patch  flashback2.patch  i3-config.patch  midnight-rofi.patch  net-traffic.patch  pull-upstream.py  pyproject.toml  regolith-look.patch  remontoire.patch  rofication.patch  rofitheme.patch  terminal-xres.patch
